--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,19 +15,21 @@
         </button>
         <div class="collapse navbar-collapse flex-grow items-center" id="navbarSupportedContent">
             <a class="flex items-center text-gray-900 hover:text-gray-900 focus:text-gray-900 mt-2 lg:mt-0 mr-1"
-                href="#">
-                <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" style="height: 15px" alt=""
-                    loading="lazy" />
+                href="/">
+                <h3 class="text-purple-700 font-bold font-mono text-2xl"> Game Freebies </h3>
             </a>
             <!-- Left links -->
             <ul class="navbar-nav flex flex-col pl-0 list-style-none mr-auto">
+
                 <li class="nav-item p-2">
-                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="games">Games</a>
+                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="/">Home</a>
+                </li>
+                <li class="p-2 mr-2"></li>
+                <li class="nav-item p-2">
+                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="games">Games
+                        List</a>
                 </li>
                 <!-- <li class="nav-item p-2">
-                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="/about">About</a>
-                </li>
-                <li class="nav-item p-2">
                     <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="/contact">Get in Touch</a>
                 </li> -->
             </ul>
@@ -43,8 +45,9 @@
             <div class="dropdown relative">
                 <a class="dropdown-toggle flex items-center hidden-arrow" href="#" id="dropdownMenuButton2"
                     role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://mdbootstrap.com/img/new/avatars/2.jpg" class="rounded-full"
-                        style="height: 25px; width: 25px" alt="" loading="lazy" />
+                    <img src="https://www.locowirelesse.com/wp-content/uploads/2020/10/DualShock-4-Wireless-Controller-for-PlayStation-4-Electric-Purple.jpg"
+                        class="rounded-full border-2 border-purple-900" style="height: 40px; width: 100%" alt=""
+                        loading="lazy" />
                 </a>
                 <ul class="dropdown-menu min-w-max absolute hidden bg-white text-base z-50 float-left py-2 list-none text-left rounded-lg shadow-lg mt-1 hidden m-0 bg-clip-padding border-none left-auto right-0"
                     aria-labelledby="dropdownMenuButton2">
