--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -3,11 +3,35 @@
 
 
 <div>
-    <h1 class="text-teal-500 font-extrabold text-center text-4xl">List of All Games</h1>
+    <h1 class="text-purple-700 font-extrabold text-center font-bold font-mono  text-4xl p-2 m-2">List of All Games</h1>
 
-    <h2 class="text-teal-500">Hello</h2>
 
-    <h2 class="text-teal-500">MFFFFFFF</h2>
+
+    <div class="container mx-auto text-center">
+        <div class="flex flex-wrap">
+            <% games.forEach(game => { %>
+            <div class="rounded-lg shadow-lg bg-white max-w-xs m-2 p-2 flex-none">
+                <a href="#!">
+                    <img class="rounded-t-lg" src="<%= game.thumbnail%>" alt="game image" loading="lazy" />
+                </a>
+                <div class="p-6">
+                    <h5 class="text-gray-900 text-xl font-medium mb-2"><%= game.title %> </h5>
+                    <p class="text-gray-700 text-base mb-4">
+                        <%= game.short_description %>
+                    </p>
+                    <button type="button"
+                        class=" inline-block px-6 py-2.5 bg-purple-500 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-purple-800 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Details</button>
+                    <div class="p-2 m-2">
+                        <div class="py-3 px-6 border-t border-gray-300 text-gray-600">
+                            <%= game.platform %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% }) %>
+        </div>
+    </div>
+
 
 
 
