--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,58 @@
 	<!-- Navigation Bar -->
 	<%-include("./partials/navbar")-%>
 
-	<main class="container ">
-
-		<!-- <p class="text-center">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, modi.
-		</p> -->
-
-		<div>
-
+	<div class="relative overflow-hidden bg-no-repeat bg-cover" style="
+	    background-position: 50%;
+	    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/146.webp');
+	    height: 350px;
+	  ">
+		<div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed"
+			style="background-color: rgba(0, 0, 0, 0.75)">
+			<div class="flex justify-center items-center h-full">
+				<div class="text-center text-white px-6 md:px-12">
+					<h1 class="text-5xl font-bold mt-0 mb-6">Gaming Freebies</h1>
+					<h3 class="text-3xl font-bold mb-8">The Land of Free Games</h3>
+					<a role="button" href="/games"
+						class="inline-block px-6 py-2.5 border-2 border-white text-white font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+						data-mdb-ripple="true" data-mdb-ripple-color="light">
+						See the list
+					</a>
+				</div>
+			</div>
 		</div>
-	</main>
 
-	<%-include("./partials/footer")-%>
+
+	</div>
+	<!-- Jumbotron -->
+	<div class="container mx-auto p-2 m-2">
+		<div class="p-6 shadow-lg rounded-lg bg-gray-100 text-gray-700">
+			<h2 class="font-semibold text-3xl mb-5">Hello world!</h2>
+			<p>
+				This is a simple hero unit, a simple jumbotron-style component for calling extra attention
+				to featured content or information.
+			</p>
+			<hr class="my-6 border-gray-300" />
+			<p>
+				It uses utility classes for typography and spacing to space content out within the larger
+				container.
+			</p>
+			<button type="button"
+				class="inline-block px-6 py-2.5 mt-4 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+				data-mdb-ripple="true" data-mdb-ripple-color="light">
+				Learn more
+			</button>
+		</div>
+	</div>
+	<!-- Jumbotron -->
+
+
+
+	<!-- End your project here-->
+
+	</div>
+
+	<div class="p-2 m-2">
+		<%-include("./partials/footer")-%>
+	</div>
 
 </body>
