--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,7 +26,7 @@
                 </li>
                 <li class="p-2 mr-2"></li>
                 <li class="nav-item p-2">
-                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="games">Games
+                    <a class="nav-link text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0" href="/games">Games
                         List</a>
                 </li>
                 <!-- <li class="nav-item p-2">
