--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 				<div class="mb-6 lg:mb-0">
 					<h2 class="text-5xl font-bold tracking-tight text-purple-500 md:text-6xl xl:text-7xl">
 						Are you ready <br />
-						<span class="text-blue-600">for an adventure?</span>
+						<span class="text-purple-600">for an adventure?</span>
 					</h2>
 				</div>
 				<div class="mb-6 lg:mb-0">
