make navbar better

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,14 @@
 <body class="bg-gray-300 dark:bg-gray-800">
 
 	<!-- Navigation Bar -->
-	<%-include("./partials/navbar")-%>
+	<%-include("./partials/nav")-%>
 
-	<div class="relative overflow-hidden bg-no-repeat bg-cover" style="
+	<div class="relative overflow-hidden bg-no-repeat bg-cover " style="
 	    background-position: 50%;
 	    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/146.webp');
 	    height: 350px;
 	  ">
-		<div class="absolute top-0 bottom-0 left-0 right-0 w-full h-full overflow-hidden bg-fixed"
+		<div class="relative top-0 bottom-0 left-0 right-0 w-full h-full overflow-hidden bg-fixed"
 			style="background-color: rgba(0, 0, 0, 0.75)">
 			<div class="flex items-center justify-center h-full">
 				<div class="px-6 text-center text-white md:px-12">
