--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,10 +14,7 @@
             </svg>
         </button>
         <div class="items-center flex-grow collapse navbar-collapse" id="navbarSupportedContent">
-            <a class="flex items-center mt-2 mr-1 text-gray-900 hover:text-gray-900 focus:text-gray-900 lg:mt-0"
-                href="/">
-                <h3 class="font-mono text-2xl font-bold text-purple-700"> Game Freebies </h3>
-            </a>
+
             <!-- Left links -->
             <ul class="flex flex-col pl-0 mr-auto navbar-nav list-style-none">
 
@@ -36,6 +33,11 @@
             <!-- Left links -->
         </div>
         <!-- Collapsible wrapper -->
+
+        <!-- Centered title in mobile -->
+        <a class="flex items-center mt-2 mr-1 text-gray-900 hover:text-gray-900 focus:text-gray-900 lg:mt-0" href="/">
+            <h3 class="font-mono text-2xl font-bold text-purple-700"> Game Freebies </h3>
+        </a>
 
         <!-- Right elements -->
         <div class="relative flex items-center">
