--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,8 +3,28 @@
 <!--  -->
 
 <nav class="relative top-0 left-0 w-full bg-white shadow">
-    <div class="container items-center justify-between m-auto text-gray-700">
+    <div class="container flex items-center justify-between m-auto text-gray-700">
         <h1 class="py-4 pl-8 text-xl font-bold">Gaming Freebees!!</h1>
+        <ul class="items-center hidden pr-5 text-base font-semibold cursor-pointer md:flex">
+            <li class="px-6 py-4 hover:bg-gray-200">Home</li>
+            <li class="px-6 py-4 hover:bg-gray-200">Contact</li>
+            <li class="px-6 py-4 hover:bg-gray-200">Services</li>
+            <li class="px-6 py-4 hover:bg-gray-200">About</li>
+        </ul>
+        <button class="block px-4 py-3 mx-2 rounded md:hidden focus:outline-none hover:bg-gray-200 group">
+            <div class="w-5 h-1 mb-1 bg-gray-600"></div>
+            <div class="w-5 h-1 mb-1 bg-gray-600"></div>
+            <div class="w-5 h-1 bg-gray-600"></div>
+            <div class="absolute top-0 w-8/12 h-screen bg-white border -right-full">
+                <ul class="flex flex-col items-center w-full pt-10 text-base cursor-pointer">
+                    <li class="w-full px-6 py-4 hover:bg-gray-200">Home</li>
+                    <li class="w-full px-6 py-4 hover:bg-gray-200">Contact</li>
+                    <li class="w-full px-6 py-4 hover:bg-gray-200">Services</li>
+                    <li class="w-full px-6 py-4 hover:bg-gray-200">About</li>
+                </ul>
+
+            </div>
+        </button>
     </div>
 
 </nav>
