--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 	<!-- Navigation Bar -->
 	<%-include("./partials/nav")-%>
 
-	<div class="relative overflow-hidden bg-no-repeat bg-cover " style="
+	<!-- <div class="relative overflow-hidden bg-no-repeat bg-cover " style="
 	    background-position: 50%;
 	    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/146.webp');
 	    height: 350px;
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Intro Section -->
 	<div class="container px-6 mx-auto my-24">
 
