--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,5 +12,5 @@
 	<script defer src="../js/brands.js"></script>
 	<script defer src="../js/solid.js"></script>
 	<script defer src="../js/fontawesome.js"></script>
-	<title>Gamer Kinuthia</title>
+	<title>Gamers' Haven</title>
 </head>
