--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,4 @@
 <!-- Dark Mode Hovering Button  -->
-
 <div class="fixed bottom-0 z-30 m-4 group light-switch">
     <button
         class="relative flex items-center p-2 text-xl font-medium border border-purple-200 rounded-full text-primary bg-gray-50 dark:border-gray-500 dark:bg-gray-800 dark:text-gray-300">
@@ -14,11 +13,9 @@
             class="hidden group-hover:block"> Toggle Dark Mode </small>
     </button>
 </div>
-
-<!--  -->
-
+<!-- Navigation Bar -->
 <nav class="relative top-0 left-0 w-full bg-gray-300 dark:bg-gray-800">
-    <div class="flex">
+    <div class="container flex items-center m-auto">
         <h1 class="py-4 pl-8 text-xl font-bold">Gamers' Haven</h1>
         <div class="container flex items-center justify-end m-auto text-gray-700 dark:text-gray-200">
             <ul class="items-center hidden pr-5 text-base font-semibold cursor-pointer md:flex">
@@ -26,10 +23,6 @@
                 <li class="px-6 py-4 hover:bg-gray-200"><a href="/games">Games</a></li>
                 <li class="px-6 py-4 hover:bg-gray-200"><a href="/">About</a></li>
             </ul>
-            <div class="hidden p-2">
-                <div class="cursor-pointer fa-regular fa-sun sun"></div>
-                <div class="cursor-pointer fa-regular fa-moon moon"></div>
-            </div>
             <button class="block px-4 py-3 mx-2 rounded group hover:bg-gray-200 focus:outline-none md:hidden">
                 <div class="w-5 h-1 mb-1 bg-gray-600"></div>
                 <div class="w-5 h-1 mb-1 bg-gray-600"></div>
