--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <div class="inset-x-0 bottom-0">
-    <footer class="text-center text-gray-700 dark:text-white">
-        <div class="p-5 m-5">
-            <h1 class="text-gray-700 text-md"> ©️ 2023
-                <p class="text-2xl text-gray-700 hover:text-purple-500"> Gamers' Haven </p>
+    <footer class="text-center ">
+        <div class="p-5 m-5 text-gray-700 dark:text-white">
+            <h1 class="text-gray-700 dark:text-white">Copyright ©️ 2023
+                <p class="text-2xl hover:text-purple-500"> Gamers' Haven </p>
             </h1>
         </div>
     </footer>
