--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1641,6 +1641,37 @@ video {
 .h-full {
   height: 100%;
 }
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+.h-5\/6 {
+  height: 83.333333%;
+}
+.h-80 {
+  height: 20rem;
+}
+.h-0 {
+  height: 0px;
+}
+.h-1\/2 {
+  height: 50%;
+}
+.max-h-96 {
+  max-height: 24rem;
+}
+.max-h-min {
+  max-height: -moz-min-content;
+  max-height: min-content;
+}
+.max-h-max {
+  max-height: -moz-max-content;
+  max-height: max-content;
+}
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
 .w-1\/4 {
   width: 25%;
 }
@@ -1659,12 +1690,46 @@ video {
 .w-full {
   width: 100%;
 }
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-auto {
+  width: auto;
+}
+.w-20 {
+  width: 5rem;
+}
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
 }
+.min-w-full {
+  min-width: 100%;
+}
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+.max-w-sm {
+  max-width: 24rem;
+}
+.max-w-xs {
+  max-width: 20rem;
+}
+.max-w-screen-sm {
+  max-width: 640px;
+}
+.max-w-lg {
+  max-width: 32rem;
+}
+.max-w-md {
+  max-width: 28rem;
+}
 .flex-none {
   flex: none;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .flex-grow {
   flex-grow: 1;
@@ -1688,6 +1753,9 @@ video {
 .list-none {
   list-style-type: none;
 }
+.grid-flow-row {
+  grid-auto-flow: row;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -1696,6 +1764,9 @@ video {
 }
 .items-center {
   align-items: center;
+}
+.items-stretch {
+  align-items: stretch;
 }
 .justify-start {
   justify-content: flex-start;
@@ -1712,12 +1783,27 @@ video {
 .gap-6 {
   gap: 1.5rem;
 }
+.gap-8 {
+  gap: 2rem;
+}
+.gap-4 {
+  gap: 1rem;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.overflow-x-clip {
+  overflow-x: clip;
 }
 .whitespace-nowrap {
   white-space: nowrap;
@@ -1730,6 +1816,9 @@ video {
 }
 .rounded-lg {
   border-radius: 0.5rem;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
@@ -2020,6 +2109,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
+.text-neutral-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
+}
 .opacity-0 {
   opacity: 0;
 }
@@ -2220,6 +2313,17 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 640px) {
+
+  .sm\:max-w-screen-sm {
+    max-width: 640px;
+  }
+
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
 
   .md\:mb-0 {
@@ -2242,8 +2346,20 @@ video {
     width: 12rem;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .md\:max-w-screen-md {
+    max-width: 768px;
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -2288,12 +2404,20 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:text-left {
     text-align: left;
   }
 }
 
 @media (min-width: 1280px) {
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 
   .xl\:gap-12 {
     gap: 3rem;
