--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,11 +16,17 @@
 <!-- Navigation Bar -->
 <nav class="relative top-0 left-0 w-full bg-gray-300 dark:bg-gray-800">
     <div class="container flex items-center justify-around m-auto text-gray-700 dark:text-gray-200">
-        <h1 class="py-4 pl-8 text-5xl font-bold font-rubik">Gamers' Haven</h1>
+        <h1 class="py-4 pl-8 text-5xl font-bold font-rubik text-sky-700">Gamers' Haven</h1>
         <ul class="items-center hidden pr-5 text-base font-semibold cursor-pointer md:flex">
-            <li class="px-6 py-4 hover:bg-gray-200"><a href="/">Home</a></li>
-            <li class="px-6 py-4 hover:bg-gray-200"><a href="/games">Games</a></li>
-            <li class="px-6 py-4 hover:bg-gray-200"><a href="/">About</a></li>
+            <a href="/">
+                <li class="px-6 py-4 hover:bg-gray-200">Home</li>
+            </a>
+            <a href="/games">
+                <li class="px-6 py-4 hover:bg-gray-200">Games</li>
+            </a>
+            <a href="/">
+                <li class="px-6 py-4 hover:bg-gray-200">About</li>
+            </a>
         </ul>
         <button class="block px-4 py-3 mx-2 rounded group hover:bg-gray-200 focus:outline-none md:hidden">
             <div class="w-5 h-1 mb-1 bg-gray-600"></div>
@@ -29,15 +35,21 @@
             <div
                 class="absolute top-0 w-2/5 transition-all duration-300 bg-gray-300 border opacity-0 -right-full h-fit group-focus:right-0 group-focus:opacity-100 dark:bg-gray-800">
                 <ul class="flex flex-col items-center w-full pt-10 text-base cursor-pointer">
-                    <li class="w-full px-6 py-4 hover:bg-gray-200">
-                        <a href="/">Home</a>
-                    </li>
-                    <li class="w-full px-6 py-4 hover:bg-gray-200">
-                        <a href="/games">Games</a>
-                    </li>
-                    <li class="w-full px-6 py-4 hover:bg-gray-200">
-                        <a href="/">About</a>
-                    </li>
+                    <a href="/">
+                        <li class="w-full px-6 py-4 hover:bg-gray-200">
+                            Home
+                        </li>
+                    </a>
+                    <a href="/games">
+                        <li class="w-full px-6 py-4 hover:bg-gray-200">
+                            Games
+                        </li>
+                    </a>
+                    <a href="/">
+                        <li class="w-full px-6 py-4 hover:bg-gray-200">
+                            About
+                        </li>
+                    </a>
                 </ul>
             </div>
         </button>
