--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,28 +1,30 @@
 <%-include("../partials/header")-%>
 
 <body">
-    <div class="overflow-hidden bg-gray-300 dark:bg-gray-800">
+    <div class="overflow-hidden bg-gray-300 dark:bg-gray-900">
         <%-include("../partials/nav")-%>
         <div>
             <h1 class="justify-center p-2 m-2 font-mono text-4xl font-bold text-center text-sky-700">List of All Games
             </h1>
-            <div class="flex flex-col items-center justify-center gap-2">
-                <div class="flex flex-wrap items-center justify-center">
+            <div class="flex flex-col items-center justify-center">
+                <div class="flex flex-wrap justify-center ">
                     <% games.slice(0, 8).forEach(game => { %>
-                    <div class="h-full max-w-md m-2 bg-white shadow-lg rounded-xl">
-                        <a href="#">
+                    <div class="max-w-md m-2 bg-white shadow-lg dark:bg-gray-700 rounded-xl">
+                        <a href="<%= game.title %>">
                             <img class="min-w-full rounded-lg" src="<%= game.thumbnail%>" alt="game image"
                                 loading="lazy" />
                         </a>
-                        <div class="p-6">
-                            <h5 class="mb-2 text-xl font-medium text-gray-900"><%= game.title %> </h5>
-                            <p class="mb-4 text-base text-gray-700">
+                        <div class="p-6 text-center">
+                            <h5 class="mb-2 text-xl font-medium text-gray-900 dark:text-gray-300"><%= game.title %>
+                            </h5>
+                            <p class="mb-4 text-base text-gray-900 dark:text-gray-300">
                                 <%= game.short_description %>
                             </p>
-                            <a href="/games/<%= game.id %>" role="button"
-                                class=" inline-block px-6 py-2.5 bg-purple-500 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-purple-800 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Details</a>
+                            <a href="/games/<%= game.title %>" role="button"
+                                class="inline-block px-6 py-2.5 bg-sky-700 text-gray-900 font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-sky-900 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out dark:text-gray-300">Details</a>
                             <div class="p-2 m-2">
-                                <div class="px-6 py-3 text-gray-600 border-t border-gray-300">
+                                <div
+                                    class="px-6 py-3 mt-auto text-gray-900 border-t border-gray-300 dark:text-gray-300">
                                     <%= game.platform %>
                                 </div>
                             </div>
