replaces tw-elements with daisy-ui

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,83 +1,34 @@
 <%-include("./partials/header")-%>
 
-<body class="">
-	<div class="overflow-hidden bg-gray-300 dark:bg-gray-900">
-		<!-- Navigation Bar -->
-		<%-include("./partials/nav")-%>
-		<div class="container px-6 mx-auto my-24">
-			<section class="mb-32 text-center text-gray-800 lg:text-left">
-				<div class="grid items-center gap-6 lg:grid-cols-2 xl:gap-12">
-					<div class="mb-6 lg:mb-0">
-						<h2 class="text-5xl font-bold tracking-tight text-sky-600 md:text-6xl xl:text-7xl">
-							Find the top <br />
-							<span class="text-blue-700">free to play games!</span>
-						</h2>
-					</div>
-					<div class="mb-6 lg:mb-0">
-						<a href="">
-							<p class="mb-4 font-bold uppercase text-sky-600">Learn more</p>
-						</a>
-						<p class="text-lg text-gray-500">
-							Keep a record of your gaming activities and look for new games to play;
-							plus free premium loot
-						</p>
-					</div>
-				</div>
-			</section>
-		</div>
-		<div class="container px-6 mx-auto my-24">
-			<section class="mb-32 text-center text-gray-800 lg:text-left">
-				<style>
-					@media (min-width: 992px) {
-						.rotate-lg-6 {
-							transform: rotate(6deg);
-						}
-					}
+<body>
 
-					/* These are the KEY styles - you can add them directly to any object you want in your project */
-					.fancy-border-radius {
-						border-radius: 53% 47% 52% 48% / 36% 41% 59% 64%;
-					}
-				</style>
-				<!-- Jumbotron -->
-				<div class="container mx-auto text-center xl:px-32 lg:text-left">
-					<div class="flex grid items-center lg:grid-cols-2">
-						<div class="mb-12 lg:mb-0">
-							<div class="relative block px-6 py-12 rounded-lg shadow-lg md:px-12 lg:-mr-14"
-								style="background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px); z-index: 1">
-								<h2 class="mb-4 text-3xl font-bold display-5">Why is it so great?</h2>
-								<p class="mb-12 text-gray-500">
-									Nunc tincidunt vulputate elit. Mauris varius purus malesuada neque iaculis
-									malesuada. Aenean gravida magna orci, non efficitur est porta id. Donec magna
-									diam.
-								</p>
-								<div class="grid md:grid-cols-3 gap-x-6">
-									<div class="mb-12 md:mb-0">
-										<h2 class="mb-4 text-3xl font-bold text-dark">10%</h2>
-										<h5 class="mb-0 text-lg font-medium text-gray-500">Less sugar</h5>
-									</div>
-									<div class="mb-12 md:mb-0">
-										<h2 class="mb-4 text-3xl font-bold text-dark">70%</h2>
-										<h5 class="mb-0 text-lg font-medium text-gray-500">More flavor</h5>
-									</div>
-									<div class="">
-										<h2 class="mb-4 text-3xl font-bold text-dark">0%</h2>
-										<h5 class="mb-0 text-lg font-medium text-gray-500">Gluten</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div>
-							<img src="./images/unsplash-1.jpg" class="w-full shadow-lg fancy-border-radius rotate-lg-6"
-								alt="" />
-						</div>
-					</div>
-				</div>
-			</section>
+    <%-include("./partials/navbar")-%>
 
-		</div>
-		<div class="p-2 m-2">
-			<%-include("./partials/footer")-%>
-		</div>
-	</div>
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="p-2 m-2">
+        <%-include("./partials/footer")-%>
+    </div>
