--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
 	<meta charset="UTF-8" />
@@ -19,5 +19,9 @@
 	<script defer src="../js/brands.js"></script>
 	<script defer src="../js/solid.js"></script>
 	<script defer src="../js/fontawesome.js"></script>
+
+	<!-- theme-change -->
+	<link rel="stylesheet" href="../css/daisy-themes.css">
+	<script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
 	<title>Gamers' Haven</title>
 </head>
