--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -28,6 +28,18 @@
                 <li class="px-6 py-4 hover:bg-gray-200">About</li>
             </a>
         </ul>
+        <div class="m-5">
+            <h2 class="mb-4 text-2xl font-bold text-green-700">Toggle</h2>
+            🌞
+            <div class="inline-block w-10">
+                <span data-toggle-theme="dark" data-act-class="pl-4"
+                    class="flex items-center w-10 pl-0 transition-all duration-300 ease-in-out border border-green-700 rounded-full cursor-pointer">
+                    <span class="w-3 h-3 m-1 bg-green-700 rounded-full">
+                    </span>
+                </span>
+            </div>
+            🌚
+        </div>
         <button class="block px-4 py-3 mx-2 rounded group hover:bg-gray-200 focus:outline-none md:hidden">
             <div class="w-5 h-1 mb-1 bg-gray-600"></div>
             <div class="w-5 h-1 mb-1 bg-gray-600"></div>
