--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,81 +1,37 @@
-<nav
-    class="relative flex flex-wrap items-center justify-between w-full py-4 text-gray-500 bg-gray-100 shadow-lg hover:text-gray-700 focus:text-gray-700 navbar navbar-expand-lg navbar-light dark:bg-gray-800 dark:text-gray-200">
-    <div class="flex flex-wrap items-center justify-between w-full px-6 container-fluid">
-        <!-- Navbar toggler for mobile -->
-        <button
-            class="navbar-toggler text-gray-500 border-0 hover:shadow-none hover:no-underline py-2 px-2.5 bg-transparent focus:outline-none focus:ring-0 focus:shadow-none focus:no-underline"
-            type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="w-6" role="img"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path fill="currentColor"
-                    d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
-                </path>
-            </svg>
-        </button>
-        <div class="items-center flex-grow collapse navbar-collapse" id="navbarSupportedContent">
-
-            <!-- Left links -->
-            <ul class="flex flex-col pl-0 mr-auto navbar-nav list-style-none">
-
-                <li class="p-2 nav-item">
-                    <a class="p-0 text-gray-500 nav-link hover:text-gray-700 focus:text-gray-700" href="/">Home</a>
-                </li>
-                <li class="p-2 mr-2"></li>
-                <li class="p-2 nav-item">
-                    <a class="p-0 text-gray-500 nav-link hover:text-gray-700 focus:text-gray-700" href="/games">Games
-                        List</a>
-                </li>
-                <!-- <li class="p-2 nav-item">
-                    <a class="p-0 text-gray-500 nav-link hover:text-gray-700 focus:text-gray-700" href="/contact">Get in Touch</a>
-                </li> -->
-            </ul>
-            <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
-
-        <!-- Centered title in mobile -->
-        <a class="flex items-center mt-2 mr-1 text-gray-900 hover:text-gray-900 focus:text-gray-900 lg:mt-0" href="/">
-            <h3 class="font-mono text-2xl font-bold text-purple-700"> Game Freebies </h3>
-        </a>
-
-        <!-- Right elements -->
-        <div class="relative flex items-center">
-            <!--  -->
-            <!-- Light Darkmode switcher -->
-
-            <!--  -->
-
-            <div class="relative dropdown">
-                <a class="flex items-center dropdown-toggle hidden-arrow" href="#" id="dropdownMenuButton2"
-                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://www.locowirelesse.com/wp-content/uploads/2020/10/DualShock-4-Wireless-Controller-for-PlayStation-4-Electric-Purple.jpg"
-                        class="border-2 border-purple-900 rounded-full" style="height: 40px; width: 100%" alt=""
-                        loading="lazy" />
-                </a>
-                <ul class="absolute right-0 left-auto z-50 hidden float-left py-2 m-0 mt-1 text-base text-left list-none bg-white border-none rounded-lg shadow-lg dropdown-menu min-w-max bg-clip-padding"
-                    aria-labelledby="dropdownMenuButton2">
-                    <li>
-                        <a class="block w-full px-4 py-2 text-sm font-normal text-gray-700 bg-transparent dropdown-item whitespace-nowrap hover:bg-gray-100"
-                            href="#">Action</a>
-                    </li>
-                    <li>
-                        <a class="block w-full px-4 py-2 text-sm font-normal text-gray-700 bg-transparent dropdown-item whitespace-nowrap hover:bg-gray-100"
-                            href="#">Another action</a>
-                    </li>
-                    <li>
-                        <a class="block w-full px-4 py-2 text-sm font-normal text-gray-700 bg-transparent dropdown-item whitespace-nowrap hover:bg-gray-100"
-                            href="#">Something else here</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="p-2">
-                <p class="cursor-pointer fa-regular fa-sun sun"></p>
-
-                <p class="cursor-pointer fa-regular fa-moon moon"></p>
-            </div>
-
-        </div>
-        <!-- Right elements -->
+<div class="navbar bg-base-100">
+    <div class="flex-1">
+        <a class="text-xl normal-case btn btn-ghost">daisyUI</a>
     </div>
-</nav>
+    <div class="flex-none md:display-none">
+        <ul class="px-1 menu menu-horizontal">
+            <li><a>Item 1</a></li>
+            <li tabindex="0">
+                <a>
+                    Parent
+                    <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                        viewBox="0 0 24 24">
+                        <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
+                    </svg>
+                </a>
+                <ul class="p-2 bg-base-100">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                </ul>
+            </li>
+            <li><a>Item 3</a></li>
+        </ul>
+    </div>
+    <div class="m-5">
+        <button data-act-class="shadow-outline" data-set-theme="light"
+            class="p-2 m-1 bg-green-700 rounded focus:outline-none">Default</button>
+        <button data-act-class="shadow-outline" data-set-theme="dark"
+            class="p-2 m-1 bg-green-700 rounded focus:outline-none">Dark</button>
+    </div>
+
+    <select class="w-full max-w-xs select select-ghost">
+        <option disabled selected>Pick the best JS framework</option>
+        <option>Svelte</option>
+        <option>Vue</option>
+        <option>React</option>
+    </select>
+</div>
