daisyui frontpage darkmode

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
     </div>
     <div class="flex-none md:display-none">
         <ul class="px-1 menu menu-horizontal">
-            <li><a>Item 1</a></li>
+            <li><a href="games">Games</a></li>
             <li tabindex="0">
                 <a>
                     Parent
@@ -28,10 +28,10 @@
             class="p-2 m-1 bg-green-700 rounded focus:outline-none">Dark</button>
     </div>
 
-    <select class="w-full max-w-xs select select-ghost">
-        <option disabled selected>Pick the best JS framework</option>
-        <option>Svelte</option>
-        <option>Vue</option>
+    <select class="max-w-xs select select-ghost">
+        <option disabled selected>Choose Theme</option>
+        <option>Light</option>
+        <option>Dark </option>
         <option>React</option>
     </select>
 </div>
